--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -66,7 +66,7 @@
           <a href="#" class="nav-link">
             <i class="nav-icon fas fa-list-alt"></i>
             <p>
-              Gestion Personal
+              Gestión Personal
               <i class="right fas fa-angle-left"></i>
             </p>
           </a>
@@ -75,9 +75,9 @@
               <a
                 routerLink="/mantenimientoPersonal"
                 routerLinkActive="active"
-                class="nav-link"
-              >
-                <i class="far fa-circle nav-icon"></i>
+                class="nav-link"              >
+                <!-- <i class="far fa-circle nav-icon"></i> -->
+                <i class="fas fa-user"></i>
                 <p>Personal</p>
               </a>
             </li>
