--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,8 +4,8 @@
 <div class="main">
   <div class="col-md-6 col-sm-12">
     <div class="login-form">
-      <div>Web Dynamo Support</div>
-      <br />
+      <div style="font-size: 16px;">Web Dynamo Support</div>
+      <br/>
       <form>
         <div class="form-group">
           <label>Usuario</label>
