Botones limpiar - mejoras en el login

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -65,7 +65,9 @@
         <li class="nav-item has-treeview">
           <a href="#" class="nav-link">
             <i class="nav-icon fas fa-list-alt"></i>
+
             <p>
+              <!-- <mat-icon class="icon-cent">login</mat-icon> -->
               Gestión Personal
               <i class="right fas fa-angle-left"></i>
             </p>
