--- a/src/app/modules/mantenimiento/app-cuenta/appcuenta.component.html
+++ b/src/app/modules/mantenimiento/app-cuenta/appcuenta.component.html
@@ -55,10 +55,16 @@
             <div class="col-12 text-center">
               <button
                 type="submit"
-                class="btn btn-primary"
+                class="btn btn-secondary"
+                (click)="limpiarFiltro()"
+              ><mat-icon>rotate_left</mat-icon> Limpiar
+              </button>
+
+              <button
+                type="submit"
+                class="btn btn-primary mx-2"
                 (click)="buscarRecursoCuenta()"
-              >
-                Buscar
+              ><mat-icon>search</mat-icon> Buscar
               </button>
             </div>
           </div>
