--- a/src/app/views/auth/login/login.component.html
+++ b/src/app/views/auth/login/login.component.html
@@ -4,18 +4,18 @@
 <div class="main">
   <div class="col-md-6 col-sm-12">
     <div class="login-form">
-      <div>Web Dynamo Support</div>
+      <div style="font-size: 16px">Web Dynamo Support</div>
       <br />
-      <form>
+      <form [formGroup]="loginForm">
         <div class="form-group">
-          <label>Usuario</label>
+          <label>UsuarioX</label>
           <input
             type="text"
             class="form-control"
             placeholder="Usuario"
-            [(ngModel)]="username"
-            [ngModelOptions]="{ standalone: true }"
+            formControlName="username"
           />
+          <small class="form-text text-danger" *ngIf="campoNoValido('username')">* Debe ingresar un usuario válido</small>
         </div>
         <div class="form-group">
           <label>Contraseña</label>
@@ -23,11 +23,16 @@
             type="password"
             class="form-control"
             placeholder="Contraseña"
-            [(ngModel)]="password"
-            [ngModelOptions]="{ standalone: true }"
+            formControlName="password"
           />
+          <small class="form-text text-danger" *ngIf="campoNoValido('password')">* Debe ingresar un usuario válido</small>
         </div>
-        <button type="button" class="btn btn-black" (click)="onSubmit()">
+        <button
+          type="button"
+          class="btn btn-black"
+          (click)="onSubmit()"
+          [disabled]="loginForm.invalid"
+        >
           Login
         </button>
       </form>
