Mejoras en el Menu - icons

--- a/src/app/layout/base/base.component.html
+++ b/src/app/layout/base/base.component.html
@@ -4,4 +4,4 @@
 <div class="content-wrapper">
   <router-outlet></router-outlet>
 </div>
-<app-appfooter></app-appfooter>
+<app-footer></app-footer>
