--- a/src/app/views/auth/login/login.component.scss
+++ b/src/app/views/auth/login/login.component.scss
@@ -20,6 +20,10 @@ body {
   padding: 0px 10px;
 }
 
+
+.brand-link {
+  text-align: center;
+}
 @media screen and (max-height: 450px) {
   .sidenav {
     padding-top: 15px;
