--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -8,7 +8,7 @@
       ></a>
     </li>
     <li class="nav-item d-none d-sm-inline-block">
-      <a routerLink="" class="nav-link">Home</a>
+      <a routerLink="home" class="nav-link">Home</a>
     </li>
     <li class="nav-item d-none d-sm-inline-block">
       <a href="#" class="nav-link" (click)="logout()">Logout</a>
