--- a/src/app/views/pages/home/home.component.html
+++ b/src/app/views/pages/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="homemod">
       <div class="title1">{{g=="F"?"Bienvenida":"Bienvenido"}}</div>
       <div class="textcontent ">Esta es la plataforma </div>
-      <div class="textcontent">de la <span class="mbold"> Dynamo Support</span> </div>
+      <div class="textcontent">de la <span class="mbold">Web Dynamo Support</span> </div>
       <div class="uservalidation" *ngIf="loading">
           <!-- <mat-spinner diameter="19" style="margin: 0 10px;"></mat-spinner> Validando -->
       </div>
