Estructura de los componentes - Limpieza de módulos

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -85,9 +85,7 @@
               <a routerLink="/mantenimientoRecurso"
                  routerLinkActive="active"
                  class="nav-link">
-                <!-- <i class="fas fa-user"></i> -->
-                <!-- <i class="fa-solid fa-laptop-mobile"></i> -->
-                <i class="fa-brands fa-github-square"></i>
+                <i class="fa-solid fa-computer"></i>
                 <p style="margin-left: 8px">Recurso Hardware</p>
               </a>
             </li>
@@ -98,7 +96,8 @@
               <a routerLink="/mantenimientoCuenta"
                  routerLinkActive="active"
                  class="nav-link"
-                 ><i class="far fa-circle nav-icon"></i>
+                 >
+                 <i class="fa-solid fa-book-circle-arrow-up"></i>
                 <p>Recurso Cuenta</p>
               </a>
             </li>
@@ -107,7 +106,7 @@
 
         <li class="nav-item has-treeview">
           <a  class="nav-link">
-            <i class="nav-icon fas fa-list-alt"></i>
+            <i class="fa-solid fa-box-circle-check"></i>
             <p>
               Mantenimiento
               <i class="right fas fa-angle-left"></i>
